# lock-ordering

./: .gitignore  Cargo.toml
examples/: side_by_side.rs  simple_api.rs
lock-ordering/: Cargo.toml  README.md
lock-ordering/examples/: chat_server.rs  simple_api.rs
lock-ordering/src/: lib.rs  lockedat.rs  relation.rs
lock-ordering/src/lock/: mutex.rs
lock-ordering/tests/: compile.rs
locked-state/: Cargo.toml
locked-state/src/: lib.rs  state.rs
src/: lib.rs  lock.rs  lockedat.rs  relation.rs
src/lock/: mod.rs  mutex.rs  rwlock.rs
tests/: api.rs
tests/fail/: lock-out-of-order.rs  lock-out-of-order.stderr
