[package]
name = "lock_ordering"
version = "0.1.0"
edition = "2021"
authors = ["Alex Konradi"]
description = "Lock ordering enforcement at compile time."
readme = "README.md"
repository = "https://github.com/akonradi/lock-ordering"
license = "MIT"
keywords = ["lock", "locking", "ordering", "deadlock"]
categories = ["no-std::no-alloc"]
rust-version = "1.75"

[lib]
name = "lock_ordering"
path = "src/lib.rs"

[features]
default = ["std", "tokio", "parking_lot", "futures"]
async = []
std = []
tokio = ["async", "dep:tokio"]
futures = ["async", "dep:futures"]
parking_lot = ["dep:parking_lot"]

[dependencies]
futures = { version = "0.3", optional = true, features = ["std"], default-features = false }
parking_lot = { version = "0.12", optional = true }
tokio = { version = "1", optional = true, features = ["sync"] }

[dev-dependencies]
static_assertions = "1.1.0"
trybuild = "1.0.85"
